# -1

./: aaa.py  msg.md  pyproject.toml  pytest.ini
src/pytest_result_sender/: plugin.py
src/pytest_result_sender.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_abc.py
