[project]
name = "pytest-result-sender"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "whitefox", email = "dongfz@foxmail.com"},
]
dependencies = ["pytest>=8.4.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[project.entry-points.pytest11]
result_log = "pytest_result_sender.plugin"

[tool.pdm.build]
package-dir = "src"


