[project]
name = "pytest-result-sender"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "whitefox", email = "dongfz@foxmail.com"},
]
dependencies = ["pytest>=8.4.2", "requests>=2.32.5"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}



[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"


[project.entry-points.pytest11]
result_log = "pytest_result_sender.plugin"


[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.0.1",
    "flake8>=7.3.0",
]

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.tox
  | venv
  | buck-out
  | build
  | dist
)/
'''


[tool.pdm.scripts]
check = {composite = [
    "isort .",
    "black .",
    "flake8 .",
]}
